testing/tests/ui/space-pipe.stderr
error: the filter operator `|` must not be preceded by any whitespace characters
       the binary OR operator is called `bitor` in rinja
        --> <source attribute>:1:4
         |
       1 | {{a |lower}}
         |    ^ close to this token
         |
 --> tests/ui/space-pipe.rs:9:10
  |
9 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: the filter operator `|` must not be preceded by any whitespace characters
       the binary OR operator is called `bitor` in rinja
        --> <source attribute>:1:4
         |
       1 | {{a | lower}}
         |    ^ close to this token
         |
  --> tests/ui/space-pipe.rs:21:10
   |
21 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
